# file-manager

./: .gitignore  CMakeLists.txt  File2Manager.sln  README.md  vcpkg.json
docs/: NLP_SUMMARY.md
include/: embedder.hpp
include/categorization/: categorization.h  collection_utils.h  event_detection.h  file_metadata.h  rules.h  scope.h  search_reflection.h  storage.h  text_extraction.h  text_utils.h  types.h
include/core/: database.h  indexer.h  sqlite3.h  usn_journal.h
include/search/: quick_search.h
src/File2Manager.App/: App.xaml  App.xaml.cs  File2Manager.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs
src/File2Manager.App/Services/: HotkeyService.cs
src/File2Manager.Core/: File2Manager.Core.csproj
src/File2Manager.Core/Models/: AppConfig.cs  CategorizationResult.cs  FileIndexRecord.cs  IndexingProgress.cs  SearchFilters.cs  SearchResultItem.cs
src/File2Manager.Core/Search/: SearchQueryParser.cs  TokenUtilities.cs
src/File2Manager.Core/Services/: CategorizationService.cs  ConfigService.cs  DatabaseService.cs  DocumentTextExtractor.cs  FileIndexingService.cs  LocalTagGenerator.cs  SearchService.cs
src/core/: database.cpp  indexer.cpp  main.cpp  usn_journal.cpp
src/search/: embedder.cpp  quick_search.cpp  test.cpp
tests/: test_categorization.cpp  test_database.cpp  test_embedder.cpp  test_indexer.cpp  test_quick_search.cpp  test_usn_journal.cpp
tests/File2Manager.SmokeTests/: File2Manager.SmokeTests.csproj  Program.cs
